--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "deep-end-youth-website",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.8",
-    "next": "13.4.8",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/register": "^7.16.9",
+    "gulp": "^4.0.2",
+    "gulp-purgecss": "^5.0.0",
+    "vinyl-sourcemaps-apply": "^0.2.1"
+  },
+  "babel": {
+    "presets": [
+      "@babel/env"
+    ]
   }
 }
