--- a/package.json
+++ b/package.json
@@ -20,5 +20,15 @@
     "presets": [
       "@babel/env"
     ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.23.0",
+    "eslint": "^9.23.0",
+    "globals": "^16.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-pug": "^5.0.0",
+    "gulp-sass": "^6.0.1",
+    "pug": "^3.0.3",
+    "sass": "^1.86.0"
   }
 }
